--- a/llamatest.ipynb
+++ b/llamatest.ipynb
@@ -517,7 +517,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "desp2protein",
    "language": "python",
    "name": "python3"
   },
