--- a/llamatest.ipynb
+++ b/llamatest.ipynb
@@ -517,7 +517,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "desp2protein",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -531,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
