minor update on flask server

--- a/llamalocal.ipynb
+++ b/llamalocal.ipynb
@@ -59,7 +59,7 @@
     }
    ],
    "source": [
-    "def system_prompt_helper(interviewer_name=None, candidate_name=None, company=None, position_name=None, qualifications=None, behavioral_count=0, technical_count=0):\n",
+    "def system_prompt_helper(interviewer_name=None, candidate_name=None, company=None, position_name=None, qualifications=None, behavioral_count=0, technical_count=0, expected_duration=30):\n",
     "        company = \"\" if company is None or company==\"\" else \" at \"+company\n",
     "        interviewer_name_p = (f\"Your name is {interviewer_name}.\") if interviewer_name is not None and interviewer_name!=\"\" else \"\"\n",
     "        candidate_name_p = (f\"The candidate you are interviewing today is {candidate_name}.\") if candidate_name is not None and candidate_name!=\"\" else \"\"\n",
@@ -93,14 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class chat_history:\n",
-    "        def __init__(self, system_prompt) -> None:\n",
+    "        def __init__(self, system_prompt, candidate_name=\"\") -> None:\n",
     "                self.messages = []\n",
     "                self.add_message(\"system\", system_prompt)\n",
+    "                self.candidate_name = candidate_name\n",
+    "                self.general_system_prompt = \"\"\n",
     "        def add_message(self, role, content):\n",
     "                self.messages.append({\"role\": role, \"content\": content})\n",
     "        def get_message(self):\n",
