--- a/llamalocal.ipynb
+++ b/llamalocal.ipynb
@@ -98,11 +98,13 @@
    "outputs": [],
    "source": [
     "class chat_history:\n",
-    "        def __init__(self, system_prompt, candidate_name=\"\") -> None:\n",
+    "        def __init__(self, system_prompt, session_id, candidate_name=\"\") -> None:\n",
     "                self.messages = []\n",
+    "                self.session_id = session_id\n",
     "                self.add_message(\"system\", system_prompt)\n",
     "                self.candidate_name = candidate_name\n",
-    "                self.general_system_prompt = \"\"\n",
+    "                self.system_prompt = system_prompt\n",
+    "                self.resume_filename = \"\"\n",
     "        def add_message(self, role, content):\n",
     "                self.messages.append({\"role\": role, \"content\": content})\n",
     "        def get_message(self):\n",
