Completed backend for page 2 and 3

--- a/llamalocal.ipynb
+++ b/llamalocal.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import tqdm as notebook_tqdm\n",
@@ -12,6 +21,7 @@
     "# from time import gmtime, strftime\n",
     "import datetime\n",
     "from enum import Enum\n",
+    "import os\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -43,21 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'PyPDF'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 16\u001b[0m\n\u001b[1;32m      8\u001b[0m         prompt \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mYou are the interviewer\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcompany\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m. \u001b[39m\u001b[38;5;132;01m{\u001b[39;00minterviewer_name_p\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcandidate_name_p\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mposition_name_p\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mqualifications_p\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mquestion_count_p\u001b[38;5;132;01m}\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;124mDate and time now: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdatetime\u001b[38;5;241m.\u001b[39mdatetime\u001b[38;5;241m.\u001b[39mnow()\u001b[38;5;241m.\u001b[39mstrftime(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mI:\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mM\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mp on \u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mB \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mY\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m. \u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;124mDuring the entire interview, DO NOT disclose the answer to the candidate or giving hints that is directly related to the answer. \u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;124mBe casual, short, and conversational. Use filling word as much as possible.\u001b[39m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;124mThe input would be captured from an ASR and your response will be read out using a TTS, so use short and conversatinoal response unless you are explaining something. \u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m     15\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m prompt\n\u001b[0;32m---> 16\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mPyPDF\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mresume_summarization_prompt_helper\u001b[39m(resume_file_path):\n\u001b[1;32m     18\u001b[0m         pdf_reader \u001b[38;5;241m=\u001b[39m PyPDF\u001b[38;5;241m.\u001b[39mPdfReader(resume_file_path)\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'PyPDF'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def system_prompt_helper(interviewer_name=None, candidate_name=None, company=None, position_name=None, qualifications=None, behavioral_count=0, technical_count=0, expected_duration=30):\n",
     "        company = \"\" if company is None or company==\"\" else \" at \"+company\n",
@@ -76,9 +74,21 @@
     "        return prompt\n",
     "import pypdf\n",
     "def resume_summarization_prompt_helper(resume_file_path):\n",
-    "        pdf_reader = pypdf.PdfReader(resume_file_path)\n",
-    "        prompt = f\"\"\"Summarize the follow resume of a candidate that will have a job interview with you very soon. Do not comment on the resume but just summarize \n",
-    "        the resume so that you can understand easily.\"\"\""
+    "        text = \"\"\n",
+    "        prompt = \"\"\n",
+    "        if os.path.isfile(resume_file_path):\n",
+    "                if resume_file_path.split(\".\")[-1] in ['pdf', 'PDF']:\n",
+    "                        pdf_reader = pypdf.PdfReader(resume_file_path)\n",
+    "                        text = \"\"\n",
+    "                        for curr_page in pdf_reader.pages:\n",
+    "                                text+=curr_page.extract_text()\n",
+    "                elif resume_file_path.split(\".\")[-1] == 'txt':\n",
+    "                        with open(resume_file_path, 'r') as file:\n",
+    "                                text = file.read()\n",
+    "        if text != \"\":\n",
+    "                prompt = f\"\"\"Summarize the follow resume of a candidate that will have a job interview with you very soon. Do not comment on the resume but just summarize \n",
+    "the key points of the resume so that you can understand easily. Don't include the candidate's name. Be concise. Here's the resume in plain text: {text}\"\"\"\n",
+    "        return prompt, text"
    ]
   },
   {
@@ -97,14 +107,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class chat_history:\n",
-    "        def __init__(self, system_prompt, session_id, candidate_name=\"\") -> None:\n",
+    "class InterviewInstance:\n",
+    "        def __init__(self, session_id) -> None:\n",
     "                self.messages = []\n",
     "                self.session_id = session_id\n",
-    "                self.add_message(\"system\", system_prompt)\n",
-    "                self.candidate_name = candidate_name\n",
-    "                self.system_prompt = system_prompt\n",
+    "                # self.add_message(\"system\", system_prompt)\n",
+    "                self.candidate_name = \"\"\n",
+    "                self.system_prompt = \"\"\n",
     "                self.resume_filename = \"\"\n",
+    "                self.resume_content = \"\"\n",
+    "                self.resume_summary = \"\"\n",
+    "                self.authorization_token = \"\"\n",
     "        def add_message(self, role, content):\n",
     "                self.messages.append({\"role\": role, \"content\": content})\n",
     "        def get_message(self):\n",
@@ -162,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +300,7 @@
    "source": [
     "system_prompt = system_prompt_helper(interviewer_name=\"Burdell\", candidate_name=\"Bob\", company=\"Microsoft\", position_name=\"Software Development Engineer\", qualifications=\"C#, OOP, Python, Machine Learning\", behavioral_count=1, technical_count=1)\n",
     "print(system_prompt)\n",
-    "history = chat_history(system_prompt)\n",
+    "history = InterviewInstance(system_prompt)\n",
     "input_text = input(\"Type :q to quit\")\n",
     "while input_text != \":q\":\n",
     "        history.add_message(\"user\", input_text)\n",
