Add resume summary that reads PDF

--- a/llamalocal.ipynb
+++ b/llamalocal.ipynb
@@ -29,10 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "RUN_WITH_MODEL = True\n",
     "model_id = \"meta-llama/Llama-3.2-1B-Instruct\"\n",
     "pipe = pipeline(\n",
     "    \"text-generation\",\n",
@@ -97,7 +98,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def summarize_resume():\n",
+    "def summarize_resume(session_id):\n",
+    "        file_path = \n",
     "        return"
    ]
   },
@@ -108,20 +110,38 @@
    "outputs": [],
    "source": [
     "class InterviewInstance:\n",
-    "        def __init__(self, session_id) -> None:\n",
-    "                self.messages = []\n",
+    "        def __init__(self, session_id, system_prompt=None, authorization_token=None, job_description=None) -> None:\n",
     "                self.session_id = session_id\n",
-    "                # self.add_message(\"system\", system_prompt)\n",
-    "                self.candidate_name = \"\"\n",
-    "                self.system_prompt = \"\"\n",
-    "                self.resume_filename = \"\"\n",
-    "                self.resume_content = \"\"\n",
-    "                self.resume_summary = \"\"\n",
-    "                self.authorization_token = \"\"\n",
+    "                self.authorization_token = authorization_token if authorization_token is not None else \"\"\n",
+    "                self.messages = [] \n",
+    "                self.job_description = job_description if job_description is not None else \"\"\n",
+    "                # self.candidate_name = \"\"\n",
+    "                self.preferred_name = None\n",
+    "                self.system_prompt = system_prompt if system_prompt is not None else \"\"\n",
+    "                if system_prompt is not None:\n",
+    "                     self.add_message(\"system\", system_prompt)\n",
+    "                self.resume_file_path = None\n",
+    "                self.resume_filename = None\n",
+    "                self.resume_content = None\n",
+    "                self.resume_summary = None\n",
+    "                self.technical_question_difficulty = None\n",
+    "                self.technical_question_count = 1\n",
+    "                self.behavioral_question_count = 0\n",
+    "                self.expectedDuration = 10\n",
+    "                self.company_name = None\n",
+    "                self.position_title = None\n",
+    "\n",
     "        def add_message(self, role, content):\n",
+    "                if role not in [\"system\", \" user\", \"assistant\"]:\n",
+    "                    raise Exception(f\"Invalid role name. Role name {role} not recognized.\")\n",
     "                self.messages.append({\"role\": role, \"content\": content})\n",
     "        def get_message(self):\n",
-    "                return self.messages"
+    "                return self.messages\n",
+    "        def generate_resume_summary(self):\n",
+    "                if self.resume_file_path is not None and self.resume_file_path != \"\":\n",
+    "                    resume_summary_prompt, self.resume_content = resume_summarization_prompt_helper(self.resume_file_path)\n",
+    "                    if RUN_WITH_MODEL:\n",
+    "                        self.resume_summary = pipe({\"role\": \"system\", \"content\": resume_summary_prompt}, max_new_token=256)"
    ]
   },
   {
