Add support for system prompt generation

--- a/llamalocal.ipynb
+++ b/llamalocal.ipynb
@@ -129,7 +129,7 @@
     "                self.behavioral_question_count = 0\n",
     "                self.expectedDuration = 10\n",
     "                self.company_name = None\n",
-    "                self.position_title = None\n",
+    "                self.position_name = None\n",
     "\n",
     "        def add_message(self, role, content):\n",
     "                if role not in [\"system\", \" user\", \"assistant\"]:\n",
@@ -141,7 +141,12 @@
     "                if self.resume_file_path is not None and self.resume_file_path != \"\":\n",
     "                    resume_summary_prompt, self.resume_content = resume_summarization_prompt_helper(self.resume_file_path)\n",
     "                    if RUN_WITH_MODEL:\n",
-    "                        self.resume_summary = pipe({\"role\": \"system\", \"content\": resume_summary_prompt}, max_new_token=256)"
+    "                        self.resume_summary = pipe({\"role\": \"system\", \"content\": resume_summary_prompt}, max_new_token=256)\n",
+    "        def prepare_system_prompt(self):\n",
+    "                self.system_prompt = system_prompt_helper(interviewer_name=\"Burdell\", candidate_name=self.preferred_name, company=self.company_name, \n",
+    "                                                          position_name=self.position_name, qualifications=self.job_description, \n",
+    "                                                          behavioral_count=self.behavioral_question_count, technical_count=self.technical_question_count, \n",
+    "                                                          technical_difficulty=self.technical_question_difficulty)"
    ]
   },
   {
