Implemented llm inference and adaptive prompting

--- a/llamalocal.ipynb
+++ b/llamalocal.ipynb
@@ -114,8 +114,9 @@
     "                self.session_id = session_id\n",
     "                self.authorization_token = authorization_token if authorization_token is not None else \"\"\n",
     "                self.messages = [] \n",
+    "                self.messages_timestamp = []\n",
     "                self.job_description = job_description if job_description is not None else \"\"\n",
-    "                # self.candidate_name = \"\"\n",
+    "                # self.candidate_name = \"\"  #use prefer name for privacy\n",
     "                self.preferred_name = None\n",
     "                self.system_prompt = system_prompt if system_prompt is not None else \"\"\n",
     "                if system_prompt is not None:\n",
@@ -127,14 +128,19 @@
     "                self.technical_question_difficulty = None\n",
     "                self.technical_question_count = 1\n",
     "                self.behavioral_question_count = 0\n",
-    "                self.expectedDuration = 10\n",
+    "                self.expected_duration = 10\n",
     "                self.company_name = None\n",
     "                self.position_name = None\n",
+    "                self.converstation_counter = 0\n",
+    "                self.interview_procedure = [0] #0 for starting up, 1 for behavioral, 2 for technical, 3 for wrapup \n",
     "\n",
     "        def add_message(self, role, content):\n",
-    "                if role not in [\"system\", \" user\", \"assistant\"]:\n",
+    "                if role not in [\"system\", \"user\", \"assistant\"]:\n",
     "                    raise Exception(f\"Invalid role name. Role name {role} not recognized.\")\n",
     "                self.messages.append({\"role\": role, \"content\": content})\n",
+    "                self.messages_timestamp.append(int(time.time()))\n",
+    "                if (role == 'user'):\n",
+    "                    self.converstation_counter += 1\n",
     "        def get_message(self):\n",
     "                return self.messages\n",
     "        def generate_resume_summary(self):\n",
@@ -146,7 +152,10 @@
     "                self.system_prompt = system_prompt_helper(interviewer_name=\"Burdell\", candidate_name=self.preferred_name, company=self.company_name, \n",
     "                                                          position_name=self.position_name, qualifications=self.job_description, \n",
     "                                                          behavioral_count=self.behavioral_question_count, technical_count=self.technical_question_count, \n",
-    "                                                          technical_difficulty=self.technical_question_difficulty)"
+    "                                                          technical_difficulty=self.technical_question_difficulty)\n",
+    "                self.interview_procedure.extend([1 for i in range(self.behavioral_question_count)])\n",
+    "                self.interview_procedure.extend([2 for i in range(self.technical_question_count)])\n",
+    "                self.interview_procedure.append(3)"
    ]
   },
   {
