--- a/llamalocal.ipynb
+++ b/llamalocal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -22,6 +22,7 @@
     "import datetime\n",
     "from enum import Enum\n",
     "import os\n",
+    "import time\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -98,9 +99,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def summarize_resume(session_id):\n",
-    "        file_path = \n",
-    "        return"
+    "# def summarize_resume(session_id):\n",
+    "#         file_path = \n",
+    "#         return"
    ]
   },
   {
